EEVEE Next: Viewport render does not use samples properly #114168

Closed
opened 2023-10-26 12:04:33 +02:00 by Sun Kim · 6 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-25 16:58, hash: 247491ef0f42
Worked: n/a

Short description of error
EEVEE Next viewport render (Viewport > Viewport Render Image) always look like 1-sample render, regardless of viewport samples setting.

Viewport render with 64 samples:

eevee_next_viewport_render_sp64.png

It seems it actually does sampling but always use the same noise patterns.

Viewport render with 1 sample (zoomed in):

eevee_next_viewport_render_sp1_zoomed.png

Viewport render with 64 samples (zoomed in):

eevee_next_viewport_render_sp64_zoomed.png

Short description of issue

  • Open attached eevee_next_viewport_render_samples.blend file
  • Set Viewport Shading toRendered
  • In the 3D View go to View and press Viewport Render Image - Note that the resulting image has 1 sample
  • Change the Viewport Sample to 2 and check the Viewport Render Image again - the resulting image has 2 samples
  • Change the Viewport Sample to any large value (e.g. 64) and check Viewport Render Image again - the resulting image continues to have 2 samples
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.84 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-25 16:58, hash: `247491ef0f42` Worked: n/a **Short description of error** EEVEE Next viewport render (`Viewport` > `Viewport Render Image`) always look like 1-sample render, regardless of viewport samples setting. Viewport render with 64 samples: ![eevee_next_viewport_render_sp64.png](/attachments/8474a1f9-2240-4cb9-b7c7-2027c57c7f87) It seems it actually does sampling but always use the same noise patterns. Viewport render with 1 sample (zoomed in): ![eevee_next_viewport_render_sp1_zoomed.png](/attachments/8c4d3422-c081-453d-bdb2-2518f60a818a) Viewport render with 64 samples (zoomed in): ![eevee_next_viewport_render_sp64_zoomed.png](/attachments/360e0c1b-37bf-43d9-b0f0-e5b7a4297404) **Short description of issue** - Open attached [eevee_next_viewport_render_samples.blend](/attachments/24d356de-b37b-4236-a3b9-ec758b219358) file - Set Viewport Shading to`Rendered` - In the 3D View go to `View` and press `Viewport Render Image` - Note that the resulting image has 1 sample - Change the Viewport Sample to 2 and check the `Viewport Render Image` again - the resulting image has 2 samples - Change the Viewport Sample to any large value (e.g. 64) and check `Viewport Render Image` again - the resulting image continues to have 2 samples
Sun Kim added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-10-26 12:04:33 +02:00

Seems, that voxel size is fixed in screen space, and it is quite rough. Not sure if I would call this a bug, seems more like TODO item to me.

Seems, that voxel size is fixed in screen space, and it is quite rough. Not sure if I would call this a bug, seems more like TODO item to me.

Seems, that voxel size is fixed in screen space, and it is quite rough. Not sure if I would call this a bug, seems more like TODO item to me.

In addition to volume voxels, this report also mentions viewport samples (which soften shadows, volume, edges...).

I'm not sure how these samples affect Viewport Render, but the current behavior does not seem to be as expected.

So I'm confirming for now.

Cc. @fclem

> Seems, that voxel size is fixed in screen space, and it is quite rough. Not sure if I would call this a bug, seems more like TODO item to me. In addition to volume voxels, this report also mentions viewport samples (which soften shadows, volume, edges...). I'm not sure how these samples affect Viewport Render, but the current behavior does not seem to be as expected. So I'm confirming for now. Cc. @fclem
Member

I think this was caused because some object types caused the renderer to reset every frame, which was fixed a while ago.
In any case, the issue doesn't seem to be there anymore, so I'm closing this.

I think this was caused because some object types caused the renderer to reset every frame, which was fixed a while ago. In any case, the issue doesn't seem to be there anymore, so I'm closing this.
Blender Bot added
Status
Archived
and removed
Status
Confirmed
labels 2023-12-13 19:52:48 +01:00

I checked in again and the issue doesn't seem to have been fixed.
I noticed that the steps to reproduce the problem were missing. So I added it.

Apparently for Viewport Render Image the steps are limited to 2, I don't know if this is somehow expected.
In EEVEE Legacy, the greater the number of steps, the longer the viewport render time.

I checked in again and the issue doesn't seem to have been fixed. I noticed that the steps to reproduce the problem were missing. So I added it. Apparently for `Viewport Render Image` the steps are limited to 2, I don't know if this is somehow expected. In EEVEE Legacy, the greater the number of steps, the longer the viewport render time.
Author
Contributor

@mano-wii Thanks for adding reproduction steps.

Yeah, I don't think this is fixed.

Final render (64 samples):

final_render_64spp.png

Viewport render (64 samples):

viewport_render_64spp.png

@mano-wii Thanks for adding reproduction steps. Yeah, I don't think this is fixed. Final render (64 samples): ![final_render_64spp.png](/attachments/e246a546-29e8-4350-90e2-cc14a7c4c0dd) Viewport render (64 samples): ![viewport_render_64spp.png](/attachments/e520198e-f240-42e6-86b8-0bf286672435)
Germano Cavalcante added
Status
Needs Info from Developers
and removed
Status
Archived
labels 2023-12-14 12:54:41 +01:00
Member

Oops, sorry. I've missed the Viewport Render Image part.
I'll check.

Oops, sorry. I've missed the Viewport Render **Image** part. I'll check.
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-12-19 16:13:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114168
No description provided.