Fix #114168: EEVEE-Next: Viewport image render sampling

Support sample accumulation in viewport image rendering.

Pull Request: https://projects.blender.org/blender/blender/pulls/116198