source/blender/draw/engines/eevee_next/eevee_engine.cc
@@ -103,8 +103,12 @@ static void eevee_engine_init(void *vedata)
 static void eevee_draw_scene(void *vedata)
 {
   EEVEE_Data *ved = reinterpret_cast<EEVEE_Data *>(vedata);
-  DefaultFramebufferList *dfbl = DRW_viewport_framebuffer_list_get();
-  ved->instance->draw_viewport(dfbl);
+  if (DRW_state_is_viewport_image_render()) {
+    ved->instance->draw_viewport_image_render();
+  }
+  else {
+    ved->instance->draw_viewport();
+  }
   STRNCPY(ved->info, ved->instance->info.c_str());
   /* Reset view for other following engines. */
   DRW_view_set_active(nullptr);
