source/blender/draw/engines/eevee_next/eevee_sampling.cc
@@ -75,7 +75,8 @@ void Sampling::end_sync()
 
     interactive_mode_ = viewport_sample_ < interactive_mode_threshold;
 
-    bool interactive_mode_disabled = (inst_.scene->eevee.flag & SCE_EEVEE_TAA_REPROJECTION) == 0;
+    bool interactive_mode_disabled = (inst_.scene->eevee.flag & SCE_EEVEE_TAA_REPROJECTION) == 0 ||
+                                     inst_.is_viewport_image_render();
     if (interactive_mode_disabled) {
       interactive_mode_ = false;
       sample_ = viewport_sample_;
